--- a/templates/thread/index.html.twig
+++ b/templates/thread/index.html.twig
@@ -25,8 +25,8 @@
 	</div>
 
 	{# Section de débogage #}
-	<div class="debugBox">
+	{# <div class="debugBox">
 		<h2>Debug</h2>
 		<pre>{{ dump(threads) }}</pre>
-	</div>
+	</div> #}
 {% endblock %}
